fix: remove scrollbar because viewport is too high

--- a/source/scss/components/_viewport.scss
+++ b/source/scss/components/_viewport.scss
@@ -15,9 +15,8 @@
 .pl-c-viewport {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
 	width: 100%;
-	position: relative;
+	position: absolute;
 	top: $offset-top;
 	bottom: 0;
 	left: 0;
